# CRM-Backend

./: Dockerfile  docker-compose-prod.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 1561ad9e0fd3_change_services_to_list.py  3e2ab3e584b3_init_db.py  5009c60cf8c8_make_appointment_date_nullable.py  a6c2abd1561d_add_appointment_table.py  e944d01a9d19_add_appointment_table2.py
src/app/: celery_worker.py  main.py
src/app/api/v1/endpoints/: appointment.py  auth.py  center.py  user.py
src/app/core/: celery_app.py  config.py  email.py  exception_handler.py  exception_utils.py  exceptions.py  security.py
src/app/crud/: appointment_crud.py  center_crud.py  user_crud.py
src/app/db/: base.py  redis_conn.py  session.py
src/app/models/: appointment_model.py  center_model.py  user_model.py
src/app/schemas/: appointment_schema.py  auth_schema.py  center_schema.py
src/app/services/: appointment_service.py  auth_service.py  center_service.py  user_service.py
src/app/tasks/: email_tasks.py
